--- a/web 2 - bai giang/food-app/templates/new_food.html
+++ b/web 2 - bai giang/food-app/templates/new_food.html
@@ -22,7 +22,7 @@
         <!-- cái target = "#" là j? -->
         <!-- thẻ href dùng '/' như này thôi cũng đc ah? -->
         <a href="/foods/delete/{{ loop.index0 }}">Xóa món ăn</a>
-        <a href="/foods/edit_food/{{ loop.index0 }}">Sửa thông tin món ăn</a>
+        <a href="/foods/edit/{{ loop.index0 }}">Sửa thông tin món ăn</a>
         <hr>
     {% endfor %}
 
